[project]
name = "syncwave"
version = "0.2.1"
description = "Make your code reactive; Turn plain JSONs into a live data store, two-way synced with Python objects."
readme = "README.md"
authors = [{ name = "Lucas Iannitello", email = "lucas.iannitello@protonmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0",
    "watchdog>=6.0.0",
]
license = { file = "LICENSE" }
keywords = []
classifiers = []

[project.urls]
Homepage = "https://github.com/iannitello/syncwave"
Issues = "https://github.com/iannitello/syncwave/issues"
Repository = "https://github.com/iannitello/syncwave"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.128.8",
    "mkdocs-material>=9.7.5",
    "mkdocstrings-python>=1.18.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ANN",  # flake8-annotations
    "FBT",  # flake8-boolean-trap
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "RUF",  # ruff
    "UP",   # pyupgrade
]
extend-select = ["D401","D404","D413"]
ignore = [
    "D105",    # missing docstring in magic method
    "ANN401",  # typing.Any disallowed
]
unfixable = [
    "F401"  # disable fix for unused imports
]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I002"]
"!src/**.py" = ["D"]
"!src/__init__.py" = ["D100"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
extra-standard-library = ["typing_extensions"]
known-third-party = ["fastapi", "pydantic", "syncwave"]
